js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-assignment-expression-import-defer-no-new-call-expression-prop-access.js








































$DONOTEVALUATE();

let f = () => new import.defer('./empty_FIXTURE.js').prop;
